--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "server": "json-server -d 750 -w --host 192.168.100.6 -p 3333 ./src/services/server.json",
+    "server_": "json-server -d 750 -w --host 192.168.100.6 -p 3333 ./src/services/server.json",
     "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
-    "@nozbe/watermelondb": "^0.23.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
